UI changes push

--- a/dashboard.html
+++ b/dashboard.html
@@ -136,19 +136,19 @@
               </div>
               <div class="scoreListSection">
                 <p>Failed</p>
-                <div class="scoreNumber">90<span class="succeededBg"></span></div>
-              </div>
-              <div class="scoreListSection">
-                <p>Suppressed</p>
                 <div class="scoreNumber">90<span class="failedBg"></span></div>
               </div>
               <div class="scoreListSection">
+                <p>Suppressed</p>
+                <div class="scoreNumber">90<span class="suppressedBG"></span></div>
+              </div>
+              <div class="scoreListSection">
                 <p>Transmitted</p>
-                <div class="scoreNumber">90<span class="succeededBg"></span></div>
+                <div class="scoreNumber">90<span class="suppressedBG"></span></div>
               </div>
               <div class="scoreListSection">
                 <p>Error</p>
-                <div class="scoreNumber">90<span class="succeededBg"></span></div>
+                <div class="scoreNumber">90<span class="failedBg"></span></div>
               </div>
 
               <div class="totalScoreSection">
@@ -174,19 +174,19 @@
               </div>
               <div class="scoreListSection">
                 <p>Failed</p>
-                <div class="scoreNumber">90<span class="succeededBg"></span></div>
-              </div>
-              <div class="scoreListSection">
-                <p>Suppressed</p>
                 <div class="scoreNumber">90<span class="failedBg"></span></div>
               </div>
               <div class="scoreListSection">
+                <p>Suppressed</p>
+                <div class="scoreNumber">90<span class="suppressedBG"></span></div>
+              </div>
+              <div class="scoreListSection">
                 <p>Transmitted</p>
-                <div class="scoreNumber">90<span class="succeededBg"></span></div>
+                <div class="scoreNumber">90<span class="suppressedBG"></span></div>
               </div>
               <div class="scoreListSection">
                 <p>Error</p>
-                <div class="scoreNumber">90<span class="succeededBg"></span></div>
+                <div class="scoreNumber">90<span class="failedBg"></span></div>
               </div>
 
               <div class="totalScoreSection">
@@ -212,19 +212,19 @@
               </div>
               <div class="scoreListSection">
                 <p>Failed</p>
-                <div class="scoreNumber">90<span class="succeededBg"></span></div>
-              </div>
-              <div class="scoreListSection">
-                <p>Suppressed</p>
                 <div class="scoreNumber">90<span class="failedBg"></span></div>
               </div>
               <div class="scoreListSection">
+                <p>Suppressed</p>
+                <div class="scoreNumber">90<span class="suppressedBG"></span></div>
+              </div>
+              <div class="scoreListSection">
                 <p>Transmitted</p>
-                <div class="scoreNumber">90<span class="succeededBg"></span></div>
+                <div class="scoreNumber">90<span class="suppressedBG"></span></div>
               </div>
               <div class="scoreListSection">
                 <p>Error</p>
-                <div class="scoreNumber">90<span class="succeededBg"></span></div>
+                <div class="scoreNumber">90<span class="failedBg"></span></div>
               </div>
 
               <div class="totalScoreSection">
@@ -250,19 +250,19 @@
               </div>
               <div class="scoreListSection">
                 <p>Failed</p>
-                <div class="scoreNumber">90<span class="succeededBg"></span></div>
-              </div>
-              <div class="scoreListSection">
-                <p>Suppressed</p>
                 <div class="scoreNumber">90<span class="failedBg"></span></div>
               </div>
               <div class="scoreListSection">
+                <p>Suppressed</p>
+                <div class="scoreNumber">90<span class="suppressedBG"></span></div>
+              </div>
+              <div class="scoreListSection">
                 <p>Transmitted</p>
-                <div class="scoreNumber">90<span class="succeededBg"></span></div>
+                <div class="scoreNumber">90<span class="suppressedBG"></span></div>
               </div>
               <div class="scoreListSection">
                 <p>Error</p>
-                <div class="scoreNumber">90<span class="succeededBg"></span></div>
+                <div class="scoreNumber">90<span class="failedBg"></span></div>
               </div>
 
               <div class="totalScoreSection">
