--- a/file-edit.html
+++ b/file-edit.html
@@ -119,6 +119,7 @@
                 <label class="captureLabel">
                   Date and place of expiry
                   <span class="labelEdit">
+                    <span>Edited</span>
                     <button><img src="image/edit-light-icon.svg" alt="Icon" /></button>
                     <div class="dataCapture">
                       <img src="image/data-capture-image.png" alt="Image" />
