--- a/file-edit.html
+++ b/file-edit.html
@@ -21,47 +21,50 @@
           <button class="menuLink active">
             <img src="/image/dashboard-icon.svg" alt="Icon" />Dashboard
           </button>
-          <button class="menuLink">
+          <button class="menuLink menuLinkDisable">
             <img src="/image/transaction-resubmit.svg" alt="Icon" />Transaction Resubmit
           </button>
-          <button class="menuLink">
+          <button class="menuLink menuLinkDisable">
             <img src="/image/transaction-failures.svg" alt="Icon" />Transaction Failures
           </button>
-          <button class="menuLink">
+          <button class="menuLink menuLinkDisable">
             <img src="/image/update-tran-id.svg" alt="Icon" />Update Tran ID
           </button>
-          <button class="menuLink">
+          <button class="menuLink menuLinkDisable">
             <img src="/image/posting.svg" alt="Icon" />Posting
           </button>
-          <button class="menuLink">
+          <button class="menuLink menuLinkDisable">
             <img src="/image/swift-status.svg" alt="Icon" />SWIFT Status
           </button>
-          <button class="menuLink">
+          <button class="menuLink menuLinkDisable">
             <img src="/image/swift-failures.svg" alt="Icon" />SWIFT Failures
           </button>
-          <button class="menuLink">
+          <button class="menuLink menuLinkDisable">
             <img src="/image/development-resubmit.svg" alt="Icon" />Development Resubmit
           </button>
-          <button class="menuLink">
+          <button class="menuLink menuLinkDisable">
             <img src="/image/update-care-rate.svg" alt="Icon" />Update Card Rate
           </button>
-          <button class="menuLink">
+          <button class="menuLink menuLinkDisable">
             <img src="/image/fbc-recovery.svg" alt="Icon" />FBC Recovery - Single UID
           </button>
-          <button class="menuLink">
+          <button class="menuLink menuLinkDisable">
             <img src="/image/fwc-limit.svg" alt="Icon" />FWC/Master Limit Resubmit
           </button>
-          <button class="menuLink">
+          <button class="menuLink menuLinkDisable">
             <img src="/image/limit-status.svg" alt="Icon" />Limit Resubmit
           </button>
-          <button class="menuLink">
+          <button class="menuLink menuLinkDisable">
             <img src="/image/sfms-status-icon.svg" alt="Icon" />SFMS Status
           </button>
-          <button class="menuLink">
+          <button class="menuLink menuLinkDisable">
             <img src="/image/irm-view.svg" alt="Icon" />IRM View
           </button>
-          <button class="menuLink">
+          <button class="menuLink menuLinkDisable">
             <img src="/image/electronic-bankguarantee.svg" alt="Icon" />Electronic Bank Guarantee
+          </button>
+          <button class="menuLink">
+            <img src="/image/upload-icon.svg" alt="Icon" />Document Upload
           </button>
         </div>
 
@@ -113,34 +116,7 @@
           </div>
 
           <div class="fileEditFieldSection">
-            
-            <div class="editFieldSection">
-              <div class="fieldSection">
-                <label class="captureLabel">
-                  Date and place of expiry
-                  <span class="labelEdit">
-                    <span>Edited</span>
-                    <button><img src="image/edit-light-icon.svg" alt="Icon" /></button>
-                    <div class="dataCapture">
-                      <img src="image/data-capture-image.png" alt="Image" />
-                    </div>
-                  </span>
-                </label>
-                <input type="text" class="inputField" />
-              </div>
-              <div class="fieldSection">
-                <label class="captureLabel">
-                  Applicable rules
-                  <span class="labelEdit">
-                    <button><img src="image/edit-light-icon.svg" alt="Icon" /></button>
-                    <div class="dataCapture">
-                      <img src="image/data-capture-image.png" alt="Image" />
-                    </div>
-                  </span>
-                </label>
-                <input type="text" class="inputField" />
-              </div>
-            </div>
+          
             <div class="editFieldSection">
               <div class="fieldSection">
                 <label class="captureLabel">
