--- a/upload-file.html
+++ b/upload-file.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     
-  <div class="mainContainer">
+  <div class="mainContainer blurOption">
 
     <div class="menuNav">
     
@@ -131,11 +131,11 @@
             <div class="fileUploadMessage"><img src="image/loading-icon.svg" alt="Icon" />Encrypting Data</div>
           </div>
 
-          <div class="nextBtnSection">
+          <!-- <div class="nextBtnSection">
             <button class="Btn submitBtn">
               Next<img src="image/arrow-right-icon.svg" alt="Icon" />
             </button>
-          </div>
+          </div> -->
         </div>
       </div>
 
@@ -144,5 +144,40 @@
 
   </div>
 
+
+  <!-- Modal Start -->
+
+    <!-- <div class="modalBackgroundSection">
+      <div class="modalSection">
+        <div class="modalClose">
+          <button><img src="image/close-icon.svg" alt="Icon" /></button>
+        </div>
+
+        <div class="modalContentSection">
+          <div class="iconSection">
+            <img src="image/successful-icon.svg" alt="Icon" />
+          </div>
+          <div class="modalText">Document upload successfully.</div>
+        </div>
+      </div>
+    </div> -->
+
+
+    <div class="modalBackgroundSection">
+      <div class="modalSection">
+        <div class="modalClose">
+          <button><img src="image/close-icon.svg" alt="Icon" /></button>
+        </div>
+
+        <div class="modalContentSection">
+          <div class="iconSection iconRotate">
+            <img src="image/extract-data-icon.svg" alt="Icon" />
+          </div>
+          <div class="modalText">Extracting information from the document.</div>
+        </div>
+      </div>
+    </div>
+
+  <!-- Modal Start -->
 </body>
 </html>
