--- a/dashboard.html
+++ b/dashboard.html
@@ -25,6 +25,9 @@
             <img src="/image/transaction-resubmit.svg" alt="Icon" />Transaction Resubmit
           </button>
           <button class="menuLink">
+            <img src="/image/bank-quarantee-icon.svg" alt="Icon" />Bank Guarantee Validation
+          </button>
+          <button class="menuLink">
             <img src="/image/transaction-failures.svg" alt="Icon" />Transaction Failures
           </button>
           <button class="menuLink">
